tests/NormalTests/paczka1/small_fuzzy/89234410.err
Error in line 9: 2BMz S205 89,2
Error in line 14: 2BMz S965 -4,3
